--- a/day2_gradio.ipynb
+++ b/day2_gradio.ipynb
@@ -1,8 +1,332 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4ae5dd14",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7862\n",
+      "* Running on public URL: https://19b8af03d198776c8e.gradio.live\n",
+      "\n",
+      "This share link expires in 1 week. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"https://19b8af03d198776c8e.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created dataset file at: .gradio/flagged/dataset1.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import gradio as gr\n",
+    "\n",
+    "def greet(name,intensity):\n",
+    "    return \"Hello, \" + name + \"!\" * int(intensity)\n",
+    "\n",
+    "\n",
+    "demo = gr.Interface(\n",
+    "    fn=greet,\n",
+    "    inputs = [\"text\",\"slider\"],\n",
+    "    outputs = [\"text\"],\n",
+    "    api_name = \"predict\"\n",
+    ")\n",
+    "\n",
+    "demo.launch(share = True, auth = [(\"Dipit\",\"apple\"),(\"Random\",\"pass1\")])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "51f1d8ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# making all the imports\n",
+    "import os\n",
+    "from groq import Groq\n",
+    "from google import genai\n",
+    "from dotenv import load_dotenv\n",
+    "from IPython.display import Markdown, display\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6cae48d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/dipitmadan/Documents/LLM-Engineering-Week2/.venv/lib/python3.12/site-packages/gradio/utils.py:1171: UserWarning: Expected 2 arguments for function <function greet at 0x15ba77560>, received 1.\n",
+      "  warnings.warn(\n",
+      "/Users/dipitmadan/Documents/LLM-Engineering-Week2/.venv/lib/python3.12/site-packages/gradio/utils.py:1175: UserWarning: Expected at least 2 arguments for function <function greet at 0x15ba77560>, received 1.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7863\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7863/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "message_input = gr.Textbox(label=\"Your message:\", info=\"Enter a message for GPT-4.1-mini\", lines=7)\n",
+    "message_output = gr.Textbox(label=\"Response:\", lines=8)\n",
+    "\n",
+    "view = gr.Interface(\n",
+    "    fn=greet,\n",
+    "    title=\"GPT\", \n",
+    "    inputs=[message_input], \n",
+    "    outputs=[message_output], \n",
+    "    examples=[\"hello\", \"howdy\"], \n",
+    "    flagging_mode=\"never\"\n",
+    "    )\n",
+    "view.launch()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "80473207",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GROQ API KEY FOUND\n",
+      "GEMINI API KEY FOUND\n"
+     ]
+    }
+   ],
+   "source": [
+    "# importing the API\n",
+    "load_dotenv()\n",
+    "groq_api_key = os.getenv(\"GROQ_API_KEY\")\n",
+    "gemini_api_key = os.getenv(\"GEMINI_API_KEY\")\n",
+    "\n",
+    "if groq_api_key:\n",
+    "    print(\"GROQ API KEY FOUND\")\n",
+    "else:\n",
+    "    print(\"GROQ API KEY NOT FOUND\")\n",
+    "\n",
+    "if gemini_api_key:\n",
+    "    print(\"GEMINI API KEY FOUND\")\n",
+    "else:\n",
+    "    print(\"GEMINI API KEY NOT FOUND\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d9d06473",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7864\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7864/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "client = Groq(\n",
+    "    api_key = groq_api_key\n",
+    ")\n",
+    "\n",
+    "def message_gpt(prompt):\n",
+    "    chat_completion = client.chat.completions.create(\n",
+    "        messages = [\n",
+    "            {\n",
+    "                \"role\":\"user\",\n",
+    "                \"content\":prompt\n",
+    "            }\n",
+    "        ],\n",
+    "        model = \"llama-3.3-70b-versatile\"\n",
+    "    )\n",
+    "    return chat_completion.choices[0].message.content\n",
+    "\n",
+    "demo_app = gr.Interface(\n",
+    "    fn = message_gpt,\n",
+    "    inputs = [\"text\"],\n",
+    "    outputs = [\"text\"],\n",
+    "    api_name = \"predict\"\n",
+    ")\n",
+    "\n",
+    "demo_app.launch()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "449e0ba6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7866\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7866/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# streaming the results\n",
+    "\n",
+    "def stream_result(prompt):\n",
+    "    chat_completion = client.chat.completions.create(\n",
+    "        messages = [\n",
+    "            {\n",
+    "                \"role\":\"user\",\n",
+    "                \"content\":prompt\n",
+    "            }\n",
+    "        ],\n",
+    "        model = \"llama-3.3-70b-versatile\",\n",
+    "        stream=True\n",
+    "    )\n",
+    "    result = \"\"\n",
+    "    for chunk in chat_completion:\n",
+    "        result += chunk.choices[0].delta.content or \"\"\n",
+    "        yield result\n",
+    "\n",
+    "message_input = gr.Textbox(label=\"Your message:\", info=\"Enter a message for GROQ\", lines=7)\n",
+    "message_output = gr.Markdown(label=\"Response:\")\n",
+    "\n",
+    "view = gr.Interface(\n",
+    "    fn=stream_result,\n",
+    "    title=\"GPT\", \n",
+    "    inputs=[message_input], \n",
+    "    outputs=[message_output], \n",
+    "    examples=[\n",
+    "        \"Explain the Transformer architecture to a layperson\",\n",
+    "        \"Explain the Transformer architecture to an aspiring AI engineer\",\n",
+    "        ], \n",
+    "    flagging_mode=\"never\"\n",
+    "    )\n",
+    "view.launch()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cb5cafc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
